<resources>
    <string name="app_name">КардиоГид</string>

    // Strings for Login Screen
    <string name="prompt_email">Эл. почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="invalid_email">Такого пользователя не существует</string>
    <string name="invalid_password">Неправильный пароль</string>
    <string name="too_many_requests">Слишком много неудачных попыток войти. Попытайтесь позднее</string>
    <string name="login_failed">Ошибка входа</string>

    // Strings for Form Screen
    <string name="title_activity_form">Шаг 2 из 4</string>
    <string name="exit_menu_item">Выйти</string>
    <string name="surname_hint">Фамилия</string>
    <string name="age_hint">Возраст</string>
    <string name="weight_hint">Вес</string>
    <string name="gender_hint">Выберете пол</string>
    <string name="pressure_hint">AДс, мм рт.ст.</string>
    <string name="cholesterol_hint">Общий холестерин, ммоль/л</string>
    <string name="ldl_hint">ХС ЛНП, ммоль/л</string>
    <string name="smoking_hint">Курение</string>
    <string name="low_risk_country_hint">Страна низкого риска</string>
    <string name="send_button_text">Отправить</string>
    <string name="more_menu_item">more</string>

    // Strings for Report Screen
    <string name="title_activity_report">Результат</string>
    <string name="risk_label_text">Риск сердечно-сосудистых заболеваний по шкале Score</string>
    <string name="wide_risk_label_text">Риск за 10 лет</string>
    <string name="optimal_risk_label_text">Оптимальный риск</string>
    <string name="statin_label_text">Статин</string>
    <string name="recommendation_label_text">Рекомендации</string>
    <string name="text_input_hint">Text Input</string>
    <string name="complete_menu_item">Завершить</string>
    <string name="clear_menu_item">Очистить</string>
    <string name="rate_menu_item">Оценить</string>

    // String for Review Screen
    <string name="title_activity_review">Оценить</string>
</resources>